# dwfpy

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  publish.yml
docs/: api-reference.rst  common.rst  conf.py  index.rst  internals.rst  introduction.rst  quick-start-devices.rst  quick-start-io.rst  quick-start-labelling.rst  quick-start-logic.rst  quick-start-pattern.rst  quick-start-scope.rst  quick-start-supplies.rst  quick-start-wavegen.rst
docs/_templates/: custom-class-template.rst
examples/: analog_in_acquisition.py  analog_in_logger.py  analog_in_record.py  analog_in_sample.py  analog_in_single.py  analog_io_analog_discovery2_power.py  analog_io_analog_discovery2_system_monitor.py  analog_io_analog_discovery_power.py  analog_io_analog_discovery_system_monitor.py  analog_io_digital_discovery.py  analog_io_electronics_explorer.py  analog_out_custom.py  analog_out_phase.py  analog_out_sine.py  demo.py  device_enumeration.py  device_info.py  digital_in_acquisition.py  digital_in_pulse_trigger.py  digital_in_record.py  digital_in_record_compress.py  digital_in_stream_to_bin.py  digital_out_binary_counter.py  digital_out_clock.py  digital_out_duty.py  digital_out_phase.py  digital_out_pins.py  digital_out_pulse.py  protocol_i2c.py  protocol_spi.py  protocol_uart.py
src/dwfpy/: __init__.py  analog_input.py  analog_io.py  analog_output.py  analog_recorder.py  application.py  bindings.py  configuration.py  constants.py  device.py  device_info.py  digital_input.py  digital_io.py  digital_output.py  digital_recorder.py  exceptions.py  helpers.py  protocols.py
