[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "too-many-arguments",
  "too-many-locals",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-many-lines",
  "too-many-branches",
  "too-many-return-statements",
  "too-few-public-methods",
  "no-else-return",
  "duplicate-code",
  "cyclic-import",
]

[[tool.mypy.overrides]]
module = 'matplotlib.*'
ignore_missing_imports = true
