[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "cyclic-import",
  "duplicate-code",
  "no-else-return",
  "redefined-builtin",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-public-methods",
  "too-many-return-statements",
]

[[tool.mypy.overrides]]
module = 'matplotlib.*'
ignore_missing_imports = true
