[metadata]
name = dwfpy
version = 1.0.1
description = Python Bindings for Digilent WaveForms API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mariusgreuel/dwfpy
author = Marius Greuel
author_email = greuelm@mgtek.com
license = MIT
keywords = digilent,waveforms,analog discovery,digital discovery,ad2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/mariusgreuel/dwfpy/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
